# rocket-htmx-todo

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2021-11-13-202614_create_todos/: up.sql
src/: db.rs  main.rs  schema.rs  todos.rs
src/todo/: mod.rs  model.rs  web.rs
templates/: base.html.tera  index.html.tera
templates/todos/: item.html.tera
